dev/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: yas-dev
  labels:
    app: webhook
spec:
  type: ClusterIP
  selector:
    app: webhook
  ports:
  - port: 80
    targetPort: 80
